[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/dialog_editor/fonts/text_normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://components/dialog_editor/components/speech/scripts/speech.gd" type="Script" id=2]
[ext_resource path="res://components/dialog_editor/assets/xmark_solid.png" type="Texture" id=3]
[ext_resource path="res://components/dialog_editor/assets/pen-solid.png" type="Texture" id=6]
[ext_resource path="res://components/dialog_editor/assets/plus-solid.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[node name="Speech" type="Node2D"]
script = ExtResource( 2 )
size_x = 328

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0.247059, 0.235294, 0.278431, 1 )
polygon = PoolVector2Array( 300, 0, 300, 300, 0, 300, 0, 0 )

[node name="Control" type="Control" parent="."]
margin_right = 300.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Control"]
margin_left = 12.0
margin_top = 12.0
margin_right = 288.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0.9, 0.9, 0.9, 1 )
custom_fonts/font = ExtResource( 1 )
text = "(укоризненно взглянула на ГГ за грубость) Анастасия, помогая директору по многим вопросам. Я так понимаю, что ты приехал тут отдыхать, так что не нарывайся на особые проблемы, ну знаешь, домик на отшибе."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 303.0
margin_right = 328.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="Control/VBoxContainer"]
margin_right = 25.0
margin_bottom = 20.0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/Remove"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.5
margin_top = -10.0
margin_right = 6.5
margin_bottom = 10.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="Button" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 25.0
margin_bottom = 44.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/Edit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.5
margin_top = -6.0
margin_right = 3.5
margin_bottom = 6.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceContainer" type="Node2D" parent="."]
position = Vector2( 0, 308 )

[node name="ChoiceLine" type="Line2D" parent="."]
position = Vector2( 3, 0 )
points = PoolVector2Array( 8, 305, 8, 345 )
default_color = Color( 0.247059, 0.235294, 0.278431, 1 )

[node name="ChoiceAdd" type="Button" parent="."]
margin_left = 2.0
margin_top = 351.0
margin_right = 20.0
margin_bottom = 371.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ChoiceAdd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ChoiceAdd" to="." method="_on_ChoiceAdd_pressed"]
